Added CSS. Worked on links.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="page2.html">Page 2</a></li>
+                    <li><a href="page3.html">On page link</a></li>
+                    <li><a href="page4.html">External Link</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -55,16 +55,16 @@
                 <img src="images/portrait.jpg" class="img-responsive center-block img-rounded" alt="portrait.jpg">
             </div>
             <div class="col-xs-6 col-md-3 col-md-offset-1">
-                <h3>Eric Nelson</h3>
+                <h1>Eric Nelson</h1>
 
                 <!-- Contact info below was intentionally fake. I get enough calls and emails from spammers who scraped my info from sites like Monster.com. I will not publish my contact info on publicly visible sites, and there is no exception to this. I am open to using an email relay if you can suggest one. -->
-                <p><a class="contact" href="mailto:null@null.com">E-mail Me</a>
-                    <br><a class="contact" href="tel:+155555555555">Call me</a></p>
+                <p><a id="contact" href="mailto:null@null.com">E-mail Me</a></p>
+                <p><a id="contact" href="tel:+155555555555">Call me</a></p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-6 col-md-push-2 col-md-3">
+            <div class="col-xs-6 col-md-offset-2 col-md-3">
                 <h3 class="center">IT Skills</h3>
                 <ul>
                     <li>CCNA Certified (In progress)</li>
@@ -75,7 +75,7 @@
                 </ul>
             </div>
 
-            <div class="col-xs-6 col-md-push-4 col-md-3">
+            <div class="col-xs-6 col-md-offset-1 col-md-3">
                 <h3 class="center">Portfolio</h3>
                 <p>Link 1
                     <br> Link 2
@@ -85,7 +85,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-6 col-md-push-2 col-md-3">
+            <div class="col-xs-6 col-md-offset-2 col-md-3">
                 <h3 class="center">Education</h3>
                 <ul>
                     <li>Hennepin Technical College</li>
@@ -112,7 +112,7 @@
                 </p>
             </div>
 
-            <div class="col-xs-6 col-md-push-4 col-md-3">
+            <div class="col-xs-6 col-md-offset-1 col-md-3">
                 <h3 class="center">Background</h3>
                 <ul>
                     <li>HP - Managed Print Supplies Program Specialist</li>
