--- a/index.html
+++ b/index.html
@@ -21,131 +21,132 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Home</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="page2.html">Page 2</a></li>
-                    <li><a href="page3.html">On page link</a></li>
-                    <li><a href="page4.html">External Link</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
     <div class="container">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Home</a>
+                </div>
 
-
-        <div class="row">
-            <div class="col-xs-6 col-md-offset-2 col-md-3 portrait">
-                <img src="images/portrait.jpg" class="img-responsive center-block img-rounded" alt="portrait.jpg">
-            </div>
-            <div class="col-xs-6 col-md-3 col-md-offset-1">
-                <h1>Eric Nelson</h1>
-
-                <!-- Contact info below was intentionally fake. I get enough calls and emails from spammers who scraped my info from sites like Monster.com. I will not publish my contact info on publicly visible sites, and there is no exception to this. I am open to using an email relay if you can suggest one. -->
-                <p><a id="contact" href="mailto:null@null.com">E-mail Me</a></p>
-                <p><a id="contact" href="tel:+155555555555">Call me</a></p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-md-offset-2 col-md-3">
-                <h3 class="center">IT Skills</h3>
-                <ul>
-                    <li>CCNA Certified (In progress)</li>
-                    <li>A+ Certified (In progress)</li>
-                    <li>Linux Administration</li>
-                    <li>VMWare ESXi Administration</li>
-                    <li>HTML/CSS</li>
-                </ul>
-            </div>
-
-            <div class="col-xs-6 col-md-offset-1 col-md-3">
-                <h3 class="center">Portfolio</h3>
-                <p>Link 1
-                    <br> Link 2
-                    <br> Link 3
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-md-offset-2 col-md-3">
-                <h3 class="center">Education</h3>
-                <ul>
-                    <li>Hennepin Technical College</li>
-                    <ul>
-                        <li>AAS Degree</li>
-                        <ul>
-                            <li>Network Administration and Analysis (In progress)</li>
-                            <li>Desktop Support (In progress)</li>
-                            <li>.NET Developer (In progress)</li>
-                        </ul>
-                        <li>Advanced Technical Certificate</li>
-                        <ul>
-                            <li>Cisco Networking (In progress)</li>
-                            <li>Linux Networking (In progress)</li>
-                            <li>Windows Networking (In progress)</li>
-                        </ul>
-                        <li>Diploma</li>
-                        <ul>
-                            <li>Network Support Specialist (In progress)</li>
-                            <li>Desktop Support Specialist (In progress)</li>
-                        </ul>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="page2.html">Page 2</a></li>
+                        <li><a href="page3.html">On page link</a></li>
+                        <li><a href="page4.html">External Link</a></li>
                     </ul>
-                </ul>
-                </p>
+                </div>
+                <!-- /.navbar-collapse -->
             </div>
-
-            <div class="col-xs-6 col-md-offset-1 col-md-3">
-                <h3 class="center">Background</h3>
-                <ul>
-                    <li>HP - Managed Print Supplies Program Specialist</li>
-                    <ul>
-                        <li>October 2014 - Present</li>
-                        <li>Responsible for ensuring customer devices order toner automatically, and that all customer devices are properly recorded and enrolled in the Automatic Toner Delivery Program</li>
-                    </ul>
-                    <li>Wheretolive.com - Technical Support Level I/II</li>
-                    <ul>
-                        <li>November 2013 - June 2014</li>
-                        <li>Answered inbound calls, contacted customers who submitted help tickets, setup up email on mobile devices by pushing configuration settings remotely, escalated cases as needed. Worked with engineers to identify and resolve large scale bugs and issues.</li>
-                    </ul>
-                
-                </ul>
-            </div>
-        </div>
-
-        <h3></h3>
-
-    </div>
-
-    <footer>
+            <!-- /.container-fluid -->
+        </nav>
         <div class="container">
-            Copyright © 2015 Eric Nelson
+
+
+            <div class="row">
+                <div class="col-xs-6 col-md-offset-2 col-md-3 portrait">
+                    <img src="images/portrait.jpg" class="img-responsive center-block img-rounded" alt="portrait.jpg">
+                </div>
+                <div class="col-xs-6 col-md-3 col-md-offset-1">
+                    <h1>Eric Nelson</h1>
+
+                    <!-- Contact info below was intentionally fake. I get enough calls and emails from spammers who scraped my info from sites like Monster.com. I will not publish my contact info on publicly visible sites, and there is no exception to this. I am open to using an email relay if you can suggest one. -->
+                    <p><a id="contact" href="mailto:null@null.com">E-mail Me</a></p>
+                    <p><a id="contact" href="tel:+155555555555">Call me</a></p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-6 col-md-offset-2 col-md-3">
+                    <h3 class="center">IT Skills</h3>
+                    <ul>
+                        <li>CCNA Certified (In progress)</li>
+                        <li>A+ Certified (In progress)</li>
+                        <li>Linux Administration</li>
+                        <li>VMWare ESXi Administration</li>
+                        <li>HTML/CSS</li>
+                    </ul>
+                </div>
+
+                <div class="col-xs-6 col-md-offset-1 col-md-3">
+                    <h3 class="center">Portfolio</h3>
+                    <p>Link 1
+                        <br> Link 2
+                        <br> Link 3
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-6 col-md-offset-2 col-md-3">
+                    <h3 class="center">Education</h3>
+                    <ul>
+                        <li>Hennepin Technical College</li>
+                        <ul>
+                            <li>AAS Degree</li>
+                            <ul>
+                                <li>Network Administration and Analysis (In progress)</li>
+                                <li>Desktop Support (In progress)</li>
+                                <li>.NET Developer (In progress)</li>
+                            </ul>
+                            <li>Advanced Technical Certificate</li>
+                            <ul>
+                                <li>Cisco Networking (In progress)</li>
+                                <li>Linux Networking (In progress)</li>
+                                <li>Windows Networking (In progress)</li>
+                            </ul>
+                            <li>Diploma</li>
+                            <ul>
+                                <li>Network Support Specialist (In progress)</li>
+                                <li>Desktop Support Specialist (In progress)</li>
+                            </ul>
+                        </ul>
+                    </ul>
+                    </p>
+                </div>
+
+                <div class="col-xs-6 col-md-offset-1 col-md-3">
+                    <h3 class="center">Background</h3>
+                    <ul>
+                        <li>HP - Managed Print Supplies Program Specialist</li>
+                        <ul>
+                            <li>October 2014 - Present</li>
+                            <li>Responsible for ensuring customer devices order toner automatically, and that all customer devices are properly recorded and enrolled in the Automatic Toner Delivery Program</li>
+                        </ul>
+                        <li>Wheretolive.com - Technical Support Level I/II</li>
+                        <ul>
+                            <li>November 2013 - June 2014</li>
+                            <li>Answered inbound calls, contacted customers who submitted help tickets, setup up email on mobile devices by pushing configuration settings remotely, escalated cases as needed. Worked with engineers to identify and resolve large scale bugs and issues.</li>
+                        </ul>
+
+                    </ul>
+                </div>
+            </div>
+
+            <h3></h3>
+
         </div>
 
-    </footer>
+        <footer>
+            <div class="container">
+                Copyright © 2015 Eric Nelson
+            </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        </footer>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+        <!-- Bootstrap JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    </div>
 </body>
 
 </html>
