--- a/index.html
+++ b/index.html
@@ -20,27 +20,28 @@
     <![endif]-->
 </head>
 
-<body>
-    <div class="container">
+<body data-spy="scroll" data-target="#target-this">
+    <div class="container" id="home">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <div class="navbar-header navbar-left">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#target-this" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="#home">Eric Nelson</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="page2.html">Page 2</a></li>
-                        <li><a href="page3.html">On page link</a></li>
-                        <li><a href="page4.html">External Link</a></li>
+                <div class="collapse navbar-collapse" id="target-this">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#education">Education</a></li>
+                        <li><a href="#background">Background</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -51,20 +52,21 @@
 
 
             <div class="row">
-                <div class="col-xs-6 col-md-offset-2 col-md-3 portrait">
+                <div class="col-xs-6 col-sm-5 col-md-offset-2 col-md-3 portrait">
                     <img src="images/portrait.jpg" class="img-responsive center-block img-rounded" alt="portrait.jpg">
                 </div>
-                <div class="col-xs-6 col-md-3 col-md-offset-1">
-                    <h1>Eric Nelson</h1>
-
+                <div class="col-xs-12 col-md-3 col-md-offset-1">
+                    <h2>Eric Nelson</h2>
+                    <h5>Network and Server Administrator</h5>
+                    <br>
                     <!-- Contact info below was intentionally fake. I get enough calls and emails from spammers who scraped my info from sites like Monster.com. I will not publish my contact info on publicly visible sites, and there is no exception to this. I am open to using an email relay if you can suggest one. -->
-                    <p><a id="contact" href="mailto:null@null.com">E-mail Me</a></p>
-                    <p><a id="contact" href="tel:+155555555555">Call me</a></p>
+                    <p><a class="contact" href="mailto:null@null.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>&nbsp;E-mail Me</a></p>
+                    <p><a class="contact" href="tel:+155555555555"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>&nbsp;Call me</a></p>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-6 col-md-offset-2 col-md-3">
+                <div class="col-xs-12 col-md-offset-2 col-md-3" id="skills">
                     <h3 class="center">IT Skills</h3>
                     <ul>
                         <li>CCNA Certified (In progress)</li>
@@ -75,62 +77,68 @@
                     </ul>
                 </div>
 
-                <div class="col-xs-6 col-md-offset-1 col-md-3">
+                <div class="col-xs-12 col-md-offset-1 col-md-3" id="portfolio">
                     <h3 class="center">Portfolio</h3>
-                    <p>Link 1
-                        <br> Link 2
-                        <br> Link 3
-                    </p>
+                    <ul>
+                        <li><a href="http://www.cobaltphoenix.com/">Cobaltphoenix.com</a></li>
+                        <li><a href="http://www.orphancomputers.com/">Orphan Computers (redesigning, new version not live yet)</a></li>
+                        <li><a href="http://burnoutcomputer.github.io/ptCaseStudy/">Pacific Trails Case Study</a></li>
+                    </ul>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-6 col-md-offset-2 col-md-3">
+                <div class="col-xs-12 col-md-offset-2 col-md-3" id="education">
                     <h3 class="center">Education</h3>
+                    <h4>Hennepin Technical College</h4>
+                    <h5>AAS Degree</h5>
+
                     <ul>
-                        <li>Hennepin Technical College</li>
-                        <ul>
-                            <li>AAS Degree</li>
-                            <ul>
-                                <li>Network Administration and Analysis (In progress)</li>
-                                <li>Desktop Support (In progress)</li>
-                                <li>.NET Developer (In progress)</li>
-                            </ul>
-                            <li>Advanced Technical Certificate</li>
-                            <ul>
-                                <li>Cisco Networking (In progress)</li>
-                                <li>Linux Networking (In progress)</li>
-                                <li>Windows Networking (In progress)</li>
-                            </ul>
-                            <li>Diploma</li>
-                            <ul>
-                                <li>Network Support Specialist (In progress)</li>
-                                <li>Desktop Support Specialist (In progress)</li>
-                            </ul>
-                        </ul>
+                        <li>Network Administration and Analysis (In progress)</li>
+                        <li>Desktop Support (In progress)</li>
+                        <li>.NET Developer (In progress)</li>
                     </ul>
-                    </p>
+
+                    <h5>Advanced Technical Certificate</h5>
+
+                    <ul>
+                        <li>Cisco Networking (In progress)</li>
+                        <li>Linux Networking (In progress)</li>
+                        <li>Windows Networking (In progress)</li>
+                    </ul>
+
+                    <h5>Diploma</h5>
+
+                    <ul>
+                        <li>Network Support Specialist (In progress)</li>
+                        <li>Desktop Support Specialist (In progress)</li>
+                    </ul>
+
+
                 </div>
 
-                <div class="col-xs-6 col-md-offset-1 col-md-3">
+                <div class="col-xs-12 col-md-offset-1 col-md-3" id="background">
                     <h3 class="center">Background</h3>
-                    <ul>
-                        <li>HP - Managed Print Supplies Program Specialist</li>
-                        <ul>
-                            <li>October 2014 - Present</li>
-                            <li>Responsible for ensuring customer devices order toner automatically, and that all customer devices are properly recorded and enrolled in the Automatic Toner Delivery Program</li>
-                        </ul>
-                        <li>Wheretolive.com - Technical Support Level I/II</li>
-                        <ul>
-                            <li>November 2013 - June 2014</li>
-                            <li>Answered inbound calls, contacted customers who submitted help tickets, setup up email on mobile devices by pushing configuration settings remotely, escalated cases as needed. Worked with engineers to identify and resolve large scale bugs and issues.</li>
-                        </ul>
 
+                    <h4>HP - Managed Print Supplies Program Specialist</h4>
+                    <h5>October 2014 - Present</h5>
+
+                    <ul>
+                        <li>Responsible for ensuring customer devices order toner automatically, and that all customer devices are properly recorded and enrolled in the Automatic Toner Delivery Program</li>
                     </ul>
+
+                    <h4>Wheretolive.com - Technical Support Level I/II</h4>
+                    <h5>November 2013 - June 2014</h5>
+
+                    <ul>
+
+                        <li>Answered inbound calls, contacted customers who submitted help tickets, setup up email on mobile devices by pushing configuration settings remotely, escalated cases as needed. Worked with engineers to identify and resolve large scale bugs and issues.</li>
+                    </ul>
+
+
+
                 </div>
             </div>
-
-            <h3></h3>
 
         </div>
 
@@ -146,6 +154,9 @@
 
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+        <!-- Custom JavaScript -->
+        <script src="collapse.js"></script>
     </div>
 </body>
 
