--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <footer>
             <div class="container">
-                Copyright © 2015 Eric Nelson
+                Copyright &copy; 2015 Eric Nelson
             </div>
 
         </footer>
